--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
   <body>
   <div class="container-fluid">
       <h1>Welcome to Stummy</h1>
+       <form class="form-signin">
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" value="remember-me"> Remember me
+          </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      </form>
       <div class="row">
   <div class="col-md-3">.col-md-3</div>
   <div class="col-md-6">.col-md-6</div>
