Catogories and List Items
css with html commit

--- a/index.html
+++ b/index.html
@@ -21,21 +21,168 @@
   <body>
   <div class="container-fluid ">
       <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">   
-            <a class="navbar-brand" href="#">
-            <img class="logo" alt="Brand" src="custom/images/logo.png">
-            </a>
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#"><img class="logo" alt="Brand" src="custom/images/logo.png"></a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li ><a href="#" class="nav-links">Sign-in</a></li>
+                <li ><a href="#" class="links-active">Sign-in</a></li>
+                <li ><a href="#">or</a></li>
                 <li ><a href="#" class="nav-links">Sign-up</a></li>
             </ul>
-        </div>  
-      </nav>
-      <div class="container-fluid main-container"> 
+          </div><!--/.nav-collapse -->
+        </div><!--/.container -->
+      </nav><!--/.nav-defult -->
+      <div class="container main-container"> 
         <div class="row">
-          <div class="col-md-3">.col-md-3</div>
-          <div class="col-md-6">.col-md-6</div>
-          <div class="col-md-3">.col-md-3</div>
+         <div class="col-md-3 categories hidden-xs">
+            <div class="list-group">
+              <a href="#" class="list-group-item heading">
+                Stummy's Categories
+              </a>
+              <a href="#" class="list-group-item item-type">Startes</a>
+              <a href="#" class="list-group-item item-type">Thai Soups</a>
+              <a href="#" class="list-group-item item-type">Thai Startes</a>
+              <a href="#" class="list-group-item item-type">Veg. Main Course</a>
+              <a href="#" class="list-group-item item-type">Poultry Main Course</a>
+              <a href="#" class="list-group-item item-type">Appetizers: Veg</a>
+              <a href="#" class="list-group-item item-type">Appetizers: Non-Veg</a>
+              <a href="#" class="list-group-item item-type">Thai Main Course:Veg</a>
+              <a href="#" class="list-group-item item-type">Thai Main Course:Non-Veg</a>
+              <a href="#" class="list-group-item item-type"></a>
+            </div>  
+         </div>
+          <div class="col-md-6 itemList">
+              <ul class="nav nav-tabs nav-justified">
+                  <li class="breakFast"><a href="#">Break Fast</a></li>
+                  <li class="lunch"><a href="#" >Lunch</a></li>
+                  <li class="dinner"><a href="#">Dinner</a></li>
+                  <li class="lateNight"><a href="#">Late Night etc.</a></li>
+            </ul>
+            <div class="items">
+              <div class="media">
+                  <div class="media-left">
+                    <a href="#">
+                  <img class="img media-object" src="/custom/images/food/1.jpg" alt="Test">
+                    </a>
+                  </div>
+                  <div class="media-body media-bottom">
+                    <h4 class="media-heading">Media heading</h4>
+                   Sample Test
+                  </div>
+            </div>
+                <hr><div class="media">
+                  <div class="media-left">
+                    <a href="#">
+                  <img class="img media-object" src="/custom/images/food/2.jpg" alt="Test">
+                    </a>
+                  </div>
+                  <div class="media-body media-bottom">
+                    <h4 class="media-heading">Media heading</h4>
+                   Sample Test
+                  </div>
+            </div>
+                <hr><div class="media">
+                  <div class="media-left">
+                    <a href="#">
+                  <img class="img media-object" src="/custom/images/food/3.jpg" alt="Test">
+                    </a>
+                  </div>
+                  <div class="media-body media-bottom">
+                    <h4 class="media-heading">Media heading</h4>
+                   Sample Test
+                  </div>
+            </div>
+                <hr><div class="media">
+                  <div class="media-left">
+                    <a href="#">
+                  <img class="img media-object" src="/custom/images/food/4.jpg" alt="Test">
+                    </a>
+                  </div>
+                  <div class="media-body media-bottom">
+                    <h4 class="media-heading">Media heading</h4>
+                   Sample Test
+                  </div>
+            </div>
+                <hr>
+                <div class="media">
+                  <div class="media-left">
+                    <a href="#">
+                  <img class="img media-object" src="/custom/images/food/4.jpg" alt="Test">
+                    </a>
+                  </div>
+                  <div class="media-body media-bottom">
+                    <h4 class="media-heading">Media heading</h4>
+                   Sample Test
+                  </div>
+            </div>
+                <hr><div class="media">
+                  <div class="media-left">
+                    <a href="#">
+                  <img class="img media-object" src="/custom/images/food/4.jpg" alt="Test">
+                    </a>
+                  </div>
+                  <div class="media-body media-bottom">
+                    <h4 class="media-heading">Media heading</h4>
+                   Sample Test
+                  </div>
+            </div>
+                <hr><div class="media">
+                  <div class="media-left">
+                    <a href="#">
+                  <img class="img media-object" src="/custom/images/food/4.jpg" alt="Test">
+                    </a>
+                  </div>
+                  <div class="media-body media-bottom">
+                    <h4 class="media-heading">Media heading</h4>
+                   Sample Test
+                  </div>
+            </div>
+                <hr><div class="media">
+                  <div class="media-left">
+                    <a href="#">
+                  <img class="img media-object" src="/custom/images/food/4.jpg" alt="Test">
+                    </a>
+                  </div>
+                  <div class="media-body media-bottom">
+                    <h4 class="media-heading">Media heading</h4>
+                   Sample Test
+                  </div>
+            </div>
+                <hr><div class="media">
+                  <div class="media-left">
+                    <a href="#">
+                  <img class="img media-object" src="/custom/images/food/4.jpg" alt="Test">
+                    </a>
+                  </div>
+                  <div class="media-body media-bottom">
+                    <h4 class="media-heading">Media heading</h4>
+                   Sample Test
+                  </div>
+            </div>
+                <hr><div class="media">
+                  <div class="media-left">
+                    <a href="#">
+                  <img class="img media-object" src="/custom/images/food/4.jpg" alt="Test">
+                    </a>
+                  </div>
+                  <div class="media-body media-bottom">
+                    <h4 class="media-heading">Media heading</h4>
+                   Sample Test
+                  </div>
+            </div>
+                
+            
+          </div>
+              </div>              
+          <div class="col-md-3 cart hidden-xs">Cart</div>
         </div>
           </div>
       <nav class="navbar navbar-inverse navbar-fixed-bottom">
