--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li ><a href="#" class="links-active" data-toggle="modal" data-target="#loginScreen">Sign-in</a></li>
-                <li ><a href="#">or</a></li>
-                <li ><a href="#" class="nav-links">Sign-up</a></li>
+                <li ><a href="#" class="links-active" data-toggle="modal" data-target="#loginScreen">Sign-in / Sign-up</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container -->
@@ -53,20 +51,13 @@
     	<h3 class="omb_authTitle">Login or <a href="#">Sign up</a></h3>
 		<div class="row omb_socialButtons">
     	    <div class="col-xs-6 col-sm-6">
-		        <a href="#" class="btn btn-lg btn-block omb_btn-facebook">
-			        <i class="fa fa-facebook visible-xs"></i>
-			        <span class="hidden-xs">Facebook</span>
-                    <!--<div class="fb-login-button hidden-xs" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="false">Facebook</div>-->
-                    <fb:login-button size="large" data-auto-logout-link="true" scope="public_profile,email,phone" onlogin="checkLoginState();">
-</fb:login-button>
-		        </a>
+		        <img src="custom/images/button-facebook.png" onclick="FbClick()" class="socialButton"/>
+				   <div id="fbDetails"></div>
 	        </div>
         	
         	<div class="col-xs-6 col-sm-6">
-		        <a href="#" class="btn btn-lg btn-block omb_btn-google">
-			        <i class="fa fa-google-plus visible-xs"></i>
-			        <span class="hidden-xs">Google+</span>
-		        </a>
+		       <img src="custom/images/button-google-plus.png" onclick="handleAuthClick()" class="socialButton"/>
+			   <div id="googleDetails"></div>
 	        </div>	
 		</div>
 
@@ -181,7 +172,9 @@
  </div>
      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="vendor/js/jquery-1.11.3.min.js"></script>
-  	<script src="custom/js/items.js"></script>
+  	<script src="custom/js/SocialLogin.js"></script>	
+   <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
+	<script src="custom/js/items.js"></script>
 	<script src="custom/js/script.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
   </body>
