Login Screen css changes

--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
       
        <div class="modal-dialog">
     <div class="modal-content">
+	<div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel"><h3 class="omb_authTitle" align="center">Login or <a href="#">Sign up</a></h3></h4>
+      </div>
           <div class="modal-body">
        
     <div class="omb_login">
-    	<h3 class="omb_authTitle">Login or <a href="#">Sign up</a></h3>
 		<div class="row omb_socialButtons">
     	    <div class="col-xs-6 col-sm-6">
 		        <img src="custom/images/button-facebook.png" onclick="FbClick()" class="socialButton"/>
@@ -136,9 +139,9 @@
                           Hot &amp; Sour Soap Veg   
                           </span>
                           <span class="col-md-4">
-                            <span class="glyphicon glyphicon-minus" title="Click to decrease"></span> 
-                              <span class="quantity">1</span> 
-                              <span class="glyphicon glyphicon-plus" title="Click to increase"></span>
+								<span class="glyphicon glyphicon-minus" title="Click to decrease"></span> 
+								<span class="quantity">1</span> 
+								<span class="glyphicon glyphicon-plus" title="Click to increase"></span>
                           </span>                     
                           <span class="col-md-8">Sweet Corn Soup</span>                              
                           <span class="col-md-4">
