--- a/index.html
+++ b/index.html
@@ -109,6 +109,21 @@
   </div>
       </div>
       <!--End Login Screen-->
+	  <!--Customize food modal-->
+		<div class="modal fade" id="customizeFood" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="myModalLabel"><h3 class="omb_authTitle" align="center">Customize your yummy food</h3></h4>
+					</div>
+					<div class="modal-body customizeFoodBody">
+						
+					</div>
+				</div>
+			</div>
+		</div>
+	  <!--End customize food modal-->
       <div class="container main-container"> 
         <div class="row">
          <div class="col-md-3 categories hidden-xs hidden-sm">
