Update view of Cart

--- a/index.html
+++ b/index.html
@@ -149,23 +149,22 @@
               <div class="cartHeading"> <img src="custom/images/cart.png"> Your Cart</div>
               <div class="estimatedTime">Estimated Delivery time: 50 min</div>
               <div class="cartItems scroll">
-                  <div class="row cartList">
-                      <span class="col-md-8">
-                          Hot &amp; Sour Soap Veg   
-                          </span>
-                          <span class="col-md-4">
-								<span class="glyphicon glyphicon-minus" title="Click to decrease"></span> 
-								<span class="quantity">1</span> 
-								<span class="glyphicon glyphicon-plus" title="Click to increase"></span>
-                          </span>                     
-                          <span class="col-md-8">Sweet Corn Soup</span>                              
-                          <span class="col-md-4">
-                              <span class="glyphicon glyphicon-chevron-left" title="Click to decrease"></span>
-                              <span class="quantity">2 </span>
-                              <span class="glyphicon glyphicon-chevron-right" title="Click to increase"></span>
-							  <span class="glyphicon glyphicon-trash" title="Click to remove from the Cart"></span>
-                          </span>                              
-                    </div>
+                 <div class="row cartList">
+			<span class="col-md-8">Hot &amp; Sour Soap </span>
+			<span class="col-md-4">
+				<span class="glyphicon glyphicon-minus" title="Click to decrease"></span> 
+				<span class="quantity">1</span> 
+				<span class="glyphicon glyphicon-plus" title="Click to increase"></span>
+			</span>
+		</div>
+		<div class="row cartList">
+			<span class="col-md-8">Sweet Corn Soup </span>
+			<span class="col-md-4">
+				<span class="glyphicon glyphicon-minus" title="Click to decrease"></span> 
+				<span class="quantity">1</span> 
+				<span class="glyphicon glyphicon-plus" title="Click to increase"></span>
+			</span>
+		</div>
                     <hr class="hrLine">
                     <div class="customize">Customize</div>
                     <div><div class="left">Sub Total</div><div class="right">300.00</div></div>
