--- a/index.html
+++ b/index.html
@@ -113,9 +113,11 @@
 		<div class="modal fade" id="customizeFood" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
-					<div class="modal-header">
+					<div class="modal-header customizeFoodHeader">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="myModalLabel"><h3 class="omb_authTitle" align="center">Customize your yummy food</h3></h4>
+						<h4 class="modal-title" id="myModalLabel">
+                            <h3 class="omb_authTitle" align="center">Customize your yummy food</h3>
+                            <hr class="hrLine"</hr></h4>
 					</div>
 					<div class="modal-body customizeFoodBody">
 						
