customize food Modal window
->modal window
->item image display in responsive
->cart add and customize  icons next to lable(Not perfect)
->Menu bar hover and focus effect removed

--- a/index.html
+++ b/index.html
@@ -137,10 +137,7 @@
          </div>
           <div class="col-md-6 itemList">
               <ul class="nav nav-tabs nav-justified">
-                  <li class="breakFast"><a href="#">Break Fast</a></li>
-                  <li class="lunch"><a href="#" >Lunch</a></li>
-                  <li class="dinner"><a href="#">Dinner</a></li>
-                  <li class="lateNight"><a href="#">Late Night</a></li>
+                                    <li class="lateNight"><a href="#">Menu Items</a></li>
             </ul>
             <div class="items">
 				
