--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 						<h4 class="modal-title" id="myModalLabel">
                             <h3 class="omb_authTitle" align="center">Customize your yummy food</h3>
-                            <hr class="hrLine"</hr></h4>
-					</div>
+                            <hr class="hrLine"</hr></h4>					</div>
 					<div class="modal-body customizeFoodBody">
 						
 					</div>
@@ -137,7 +136,7 @@
          </div>
           <div class="col-md-6 itemList">
               <ul class="nav nav-tabs nav-justified">
-                                    <li class="lateNight"><a href="#">Menu Items</a></li>
+                  <li class="lateNight"><a href="#">Menu Items</a></li>
             </ul>
             <div class="items">
 				
