--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 	  <!--Customize food modal-->
 		<div class="modal fade" id="customizeFood" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
-				<div class="modal-content">
+				<div class="modal-content customizeFoodModel">
 					<div class="modal-header customizeFoodHeader">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 						<h4 class="modal-title" id="myModalLabel">
