Customize menu responsive and some responsive issues need to be  fixed
need to work on floating customize options when clicked on floating with
body

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 		  </div>
         </div>
           </div>
-      <nav class="navbar navbar-inverse navbar-fixed-bottom">
+      <nav class="navbar navbar-inverse navbar-fixed-bottom hidden-xs">
         <div class="container">
     
         </div>
