--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <![endif]-->
   </head>
   <body>
+  <div class="messagesBar"></div>
   <div class="container-fluid ">
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -140,8 +141,48 @@
                   <li class="lateNight"><a href="#">Menu Items</a></li>
             </ul>
             <div class="items">
-				
-            
+			<!--<div>
+				<ul class="food_items">
+					<li class="food_item" id="find_1302135">
+						<div class="food-img">
+							<img src="http://tkstatic.in/cdn/cheese-tomato_dominos_item.png" alt="cheese tomato" style="">
+						</div>
+						<div class="name">
+							Cheese Tomato
+							<br>
+							<span class="item_desc">Cheese and Fresh Tomato</span>
+						</div>
+						<div class="adopt">
+							<div class="down-arrow" id="close_1302135">
+								<a class="btn" style="padding: 0.1em 0.5em; display: block;" id="button_"><i class="fa fa-chevron-circle-down "></i></a>
+							</div>
+							<div class="pricea">
+								<i class="fa fa-inr"></i> <span class="money" id="price1302135">85	</span>
+							</div>
+						</div>
+
+					</li>
+					<li class="food_item" id="find_1302135">
+						<div class="food-img">
+							<img src="http://tkstatic.in/cdn/cheese-tomato_dominos_item.png" alt="cheese tomato" style="">
+						</div>
+						<div class="name">
+							Cheese Tomato
+							<br>
+							<span class="item_desc">Cheese and Fresh Tomato</span>
+						</div>
+						<div class="adopt">
+							<div class="down-arrow" id="close_1302135">
+								<a class="btn" style="padding: 0.1em 0.5em; display: block;" id="button_"><i class="fa fa-chevron-circle-down "></i></a>
+							</div>
+							<div class="pricea">
+								<i class="fa fa-inr"></i> <span class="money" id="price1302135">85	</span>
+							</div>
+						</div>
+
+					</li>
+				</ul>
+            </div>-->
           </div>
               </div>              
           <div class="col-md-3 cart hidden-xs hidden-sm"> 
@@ -190,11 +231,12 @@
 </div>
 <div class="row cartListTemplate hidden">
 	<div class="row cartList">
-				<span class="col-md-8 product_name_cart">Hot &amp; Sour Soap </span>
+				<span class="col-md-8 product_name_cart"></span>
 				<span class="col-md-4">
-					<span class="glyphicon glyphicon-minus" title="Click to decrease"></span> 
-					<span class="quantity">1</span> 
-					<span class="glyphicon glyphicon-plus" title="Click to increase"></span>
+					<span class="glyphicon glyphicon-minus cartMinus" title="Click to decrease"></span> 
+					<span class="quantity" data-product-code="" data-product-name="">1</span> 
+					<span class="glyphicon glyphicon-plus cartPlus" title="Click to increase"></span>
+					<!--<span class="glyphicon glyphicon-trash" title="Click to Delete"></span>					-->
 				</span>
 	</div>
 </div>
