Updated Cart functionality and Layout changes

--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
    <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
 	<script src="custom/js/items.js"></script>
 	<script src="custom/js/script.js"></script>
+	<script src="custom/js/ReadMore.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
 	<script src="vendor/js/bootstrap-dialog.min.js"></script>
   </body>
