Cart logic changes with checkbox
Style needs to be applied

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <div class="cartItems scroll">
 					<div id="cartItemDesc"></div>
                     <hr class="hrLine">
-                    <div class="customize">Customize</div>
+                    <div class="customize clearCart" title="Click to clear all cart items">Clear Cart</div>
                     <div><div class="left">Sub Total</div><div class="right">300.00</div></div>
                     <div><div class="left">Delivery Free</div><div class="right">0.00</div></div>
                     <div><div class="left">Container Charges (+)</div><div class="right">50.40</div></div>
@@ -198,9 +198,9 @@
 				<span class="col-md-7 product_name_cart"></span>
 				<span class="col-md-5">
 					<span class="glyphicon glyphicon-minus cartMinus" title="Click to decrease"></span> 
-					<span class="quantity" data-product-code="" data-product-name="">1</span> 
+					<span class="quantity" data-product-code="" data-product-name=""></span> 
 					<span class="glyphicon glyphicon-plus cartPlus" title="Click to increase"></span>
-					<span class="glyphicon glyphicon-trash" title="Click to Delete"></span>
+					<span class="glyphicon glyphicon-edit cartPanel" title="Click to Customize/Delete"></span>
 				</span>
 	</div>
 </div>
