--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </head>
   <body>
   <div class="messagesBar"></div>
+      <a id="simple-menu" href="#sidr">Left Menu</a>
   <div class="container-fluid ">
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -134,21 +135,6 @@
 		</div>
 	  <!--End customize food modal-->
       
-      <a id="left-menu" href="#left-menu">Left Menu</a> 
-<a id="right-menu" href="#right-menu">Right Menu</a>
- 
-<script>
-$(document).ready(function() {
-    $('#left-menu').sidr({
-      name: 'sidr-left',
-      side: 'left' // By default
-    });
-    $('#right-menu').sidr({
-      name: 'sidr-right',
-      side: 'right'
-    });
-});
-</script>
       <div class="container main-container"> 
         <div class="row">
          <div class="col-md-3 categories hidden-xs hidden-sm" id="categories" href="#categories">
@@ -230,7 +216,21 @@ $(document).ready(function() {
     <script src="vendor/js/bootstrap.min.js"></script>
 	<script src="vendor/js/bootstrap-dialog.min.js"></script>
 	<script src="vendor/js/jquery.sidr.min.js"></script>
-	
+	 
+<div id="sidr">
+  <!-- Your content -->
+  <div class="list-group">
+              <span class="list-group-item heading">                
+				<span class="glyphicon glyphicon-th-list" title="Click to decrease"></span> Categories
+              </span>
+            </div>
+</div>
+ 
+<script>
+$(document).ready(function() {
+  $('#simple-menu').sidr();
+});
+</script>
 
   </body>
 </html>
