Updated Left Menu view

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 			</div>
 		</div>
 	  <!--End customize food modal-->
-       <a id="left-menu" class="hidden-sm" href="#sidr"><span class="glyphicon glyphicon-chevron-left"></span></a>
+       <a id="left-menu" class="hidden-sm" href="#sidr"><span class="menuMobile">Categories</span></a>
       <div class="container main-container"> 
         <div class="row">
          <div class="col-md-3 categories hidden-xs hidden-sm" id="categories" href="#categories">
