Checkout page lsit items from local storage

--- a/check-out.html
+++ b/check-out.html
@@ -248,6 +248,24 @@
             </div>
         </div>       
     </div>
+    <div >
+        <!--<tr id="chechOutItemsTemplate">
+				        <td data-th="">
+							<div class="row">
+								<div class="col-sm-2 hidden-xs"><img src="http://placehold.it/100x100" alt="..." class="img-responsive"/></div>
+									<div class="col-sm-6"><h4 class="nomargin productName"></h4></div>
+				                </div>
+				        </td>
+				        <td data-th="Price" class="price">&#8377; </td>
+				        <td data-th="Quantity">
+                            <input type="number" class="form-control text-center quantity" value="3">
+				        </td>
+				        <td data-th="Subtotal" class="text-center" class="subtotal">&#8377; </td>
+				        <td class="actions" data-th="">
+								<button class="btn btn-danger btn-sm"><i class="glyphicon glyphicon-trash deleteItem"></i></button>												</td>
+            </tr>-->
+      
+    </div>
     <div class="row setup-content" id="step-2">
         <div class="col-xs-12">
             <div class="col-md-12 well stummyBrandingBottom">
@@ -261,7 +279,7 @@
 							<th style="width:10%"></th>
 						</tr>
 					</thead>
-					<tbody>
+					<tbody id="checkOutItemsList">
 				    <tr>
 				        <td data-th="">
 							<div class="row">
