Lot many style updations based on yesterday demo
updated on styles1.css

--- a/index1.html
+++ b/index1.html
@@ -135,7 +135,7 @@
 			</div>
 		</div>
 	  <!--End customize food modal-->
-       <a id="left-menu" class="hidden-sm" href="#sidr"><span class="menuMobile">Categories</span></a>
+       
       <div class="container main-container"> 
         <div class="row">
          <div class="col-md-3 categories hidden-xs hidden-sm" id="categories" href="#categories">
@@ -151,7 +151,7 @@
                    <li class="lateNight"><a href="#">Menu Items</a>                     
 				   </li>
             </ul>
-            <div class="items">
+            <div class="items scroll">
           </div>
               </div>              
           <div class="col-md-3 cart hidden-xs hidden-sm"> 
@@ -228,9 +228,6 @@
 </div>
  
 <script>
-$(document).ready(function() {
-  $('#left-menu').sidr();
-});
 </script>
 
   </body>
