--- a/index1.html
+++ b/index1.html
@@ -157,8 +157,8 @@
           <div class="col-md-3 cart hidden-xs hidden-sm"> 
               <div class="cartHeading"><span class="glyphicon glyphicon-shopping-cart"></span>  Your Cart <span class="badge cartItemCount"></span></div>
               <!--<div class="estimatedTime">Estimated Delivery time: 50 min</div>-->
-              <div class="cartItems scroll">
-					<div id="cartItemDesc"></div>
+              <div class="cartItems">
+					<div id="cartItemDesc" class="scroll"></div>
                     <hr class="hrLine">
                     <div class="customize clearCart" title="Click to clear all cart items">Clear Cart</div>
                     <div><div class="left">Sub Total</div><div class="right">300.00</div></div>
