some cosmetic changes
Check out

--- a/check-out.html
+++ b/check-out.html
@@ -25,17 +25,17 @@
     
   <body>
 <div class="container-fluid ">
-      <nav class="navbar navbar-default navbar-fixed-top">
+     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
+               <img src="custom/images/profile.png" class="navToggle img-responsive img-circle">
             </button>
             <a class="navbar-brand" href="#"><img class="logo" alt="Brand" src="custom/images/logo.png"></a>
           </div>
+		  <div class="col-md-6 text-center navbar-left">
+  
+		</div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li ><a href="#" class="links-active" data-toggle="modal" data-target="#loginScreen">Sign-in / Sign-up</a></li>
@@ -43,7 +43,7 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container -->
       </nav><!--/.nav-defult -->
-      <!--Login Screen-->
+       <!--Login Screen-->
       <div class="modal fade" id="loginScreen" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       
        <div class="modal-dialog">
@@ -113,7 +113,6 @@
       </div>
   <div class="container">
 	<div class="row form-group">
-        <h2 class="text-center">Check Out page</h2>
         <div class="col-xs-12">
             <ul class="nav nav-pills nav-justified thumbnail setup-panel stummyBranding">
                 <li class="active"><a href="#step-1">
@@ -288,8 +287,7 @@
 								</div>
 				        </td>
 				        <td data-th="Price">&#8377; 250</td>
-				        <td data-th="Quantity">
-                            <input type="number" class="form-control text-center" value="3">
+				        <td data-th="Quantity">3
 				        </td>
 				        <td data-th="Subtotal" class="text-center">&#8377; 750</td>
 				        <td class="actions" data-th="">
@@ -303,8 +301,7 @@
 								</div>
 				        </td>
 				        <td data-th="Price">&#8377; 25</td>
-				        <td data-th="Quantity">
-                            <input type="number" class="form-control text-center" value="2">
+				        <td data-th="Quantity">2
 				        </td>
 				        <td data-th="Subtotal" class="text-center">&#8377; 50</td>
 				        <td class="actions" data-th="">
@@ -316,7 +313,7 @@
 							<td class="text-center"><strong>Total &#8377; 800</strong></td>
 						</tr>
 						<tr>
-							<td><a href="#" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
+							<td><a href="index.html" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
 							<td colspan="2" class="hidden-xs"></td>
 							<td class="hidden-xs text-center"><strong>Total &#8377; 800</strong></td>
 							<td><a href="#" class="btn btn-primary btn-block">Proceed Payment<i class="fa fa-angle-right"></i></a></td>
